# lightx2v

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_5090  Dockerfile_cu124  Dockerfile_deploy  README.md  README_ja.md  README_zh.md  gradio_demo.py  main.py  pyproject.toml  requirements.txt  requirements_win.txt  run_hunyuan_t2v.sh  run_hunyuan_t2v_dist.sh  run_hunyuan_t2v_taylorseer.sh  run_wan_t2v.sh  setup_vae.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: README.md  README_zh.md  gradio_demo.py  gradio_demo_zh.py  run_gradio.sh  run_gradio_win.bat
configs/: hunyuan_i2v.json  hunyuan_i2v_save_quant.json  hunyuan_t2v.json  hunyuan_t2v_save_quant.json  model_pipeline.json  volcengine_voices_list.json  wan_i2v.json  wan_i2v_audio.json  wan_i2v_causvid.json  wan_i2v_dist.json  wan_i2v_save_quant.json  wan_skyreels_v2_df.json  wan_skyreels_v2_i2v.json  wan_skyreels_v2_t2v.json  wan_t2v.json  wan_t2v_causal.json  wan_t2v_causvid.json  wan_t2v_causvid_save_quant.json  wan_t2v_dist.json  wan_t2v_distill.json  wan_t2v_enhancer.json  (+2 more)
lightx2v_kernel_xpu/: CMakeLists.txt  README.md  build.bat  pyproject.toml
lightx2v_kernel_xpu/csrc/: entry.cpp  onednn.cpp  onednn_fp8.cpp  sdp.cpp  sdp_kernels.h  utils.h
lightx2v_kernel_xpu/includes/: ur_api.h
lightx2v_kernel_xpu/lgrf_uni/: build.bat  esimd_kernel_api.h  sdp_kernels.cpp
lightx2v_kernel_xpu/lgrf_uni/single_kernels/: flash.attn.b.mha128.bf16io.h  flash.attn.b.mha128.fp16.opt.h
lightx2v_kernel_xpu/python/sycl_kernels/: __init__.py
lightx2v_kernel_xpu/test/: test_fp8.py  test_sdp.py
(+2476 files in other folders)
