[build-system]
requires = [
    "scikit-build-core>=0.10",
    "torch>=2.7.0",
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "sycl-kernels"
version = "0.0.1"
description = "SYCL ESIMD Flash Attention and GEMM kernels for Intel XPU (PTL-H)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-GNinja"]
minimum-version = "build-system.requires"

wheel.py-api = "cp311"
wheel.license-files = []
wheel.packages = ["python/sycl_kernels"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_COMPILER = "icx"
CMAKE_CXX_STANDARD = "20"
